# dot-crypto-ticker

./: .gitignore  Cargo.toml  LICENSE  README.md  com.linus.dot-crypto-ticker.plist  com.username.dot-crypto-ticker.plist  env.example
.github/workflows/: clippy.yml
src/: args.rs  lib.rs  main.rs  price_data.rs  utils.rs
